2004-01-28  Jorn Baayen  <jorn@nl.linux.org>

	* src/PlaylistWindow.cs:

	Fix the bug where sometimes different songs than added would
	be played.

2004-01-28  Lee Willis  <lee@leewillis.co.uk>
            Jorn Baayen  <jorn@nl.linux.org>

	* TODO:
	* src/CoverDatabase.cs:
	* src/PlaylistWindow.cs:
	* src/Song.cs:

	Improve cover image fetching reliability.

2004-01-28  Jorn Baayen  <jorn@nl.linux.org>

	* TODO:
	* configure.in:
	* libmuine/Makefile.am:
	* libmuine/metadata.c: (assign_metadata_vorbiscomment),
	(assign_metadata_ogg), (FLAC_read_callback), (FLAC_write_callback),
	(FLAC_metadata_callback), (FLAC_error_callback),
	(assign_metadata_flac), (metadata_load):
	* libmuine/player.c: (create_decoder):
	* src/About.cs:

	Flac support, and bump version number to 0.3.0.99. Enjoy, edd ;)

2004-01-28  Jorn Baayen  <jorn@nl.linux.org>

	* libmuine/db.c: (db_get_version), (db_set_version), (db_foreach):

	Plug leaks.

2004-01-28  Jorn Baayen  <jorn@nl.linux.org>

	* src/Song.cs:

	Fix checked_cover_image being set to true when it should be false.

2004-01-28  Jorn Baayen  <jorn@nl.linux.org>

	* data/glade/PlaylistWindow.glade:
	* src/PlaylistWindow.cs:

	Revert making artist and title labels one. It broke ellipsizification..
	or whatever the right word for that is.

2004-01-27  Jorn Baayen  <jorn@nl.linux.org>

	* configure.in:
	* src/About.cs:

	Release 0.3.0, and depend on mono = 0.29 due to the bug in Mono CVS.

2004-01-27  Jorn Baayen  <jorn@nl.linux.org>

	* TODO:
	* configure.in:
	* src/About.cs:

	Release -pre2.

2004-01-27  Jorn Baayen  <jorn@nl.linux.org>

	* data/glade/PlaylistWindow.glade:
	* src/PlaylistWindow.cs:

	Make title_label and artist_label one, so that the text 
	can be easier selected. As suggested by synap.

2004-01-27  Jorn Baayen  <jorn@nl.linux.org>

	* TODO:
	* src/CoverDatabase.cs:
	* src/Muine.cs:
	* src/PlaylistWindow.cs:
	* src/Song.cs:
	* src/SongDatabase.cs:

	Use dirname:albumname as album key. As discussed with ziegler.
